Resume RAG Agent

--- a/code-writer/Code writer with human feedback.ipynb
+++ b/code-writer/Code writer with human feedback.ipynb
@@ -5,17 +5,7 @@
    "id": "febf802e",
    "metadata": {},
    "source": [
-    "# Society of Mind"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "f31a4584",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "api_key=None"
+    "#### Society of Mind + User Proxy Agent as Human in the Loop"
    ]
   },
   {
